--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,11 @@
     font-family: 'Gotham';
     src: url('/fonts/gotham-bold-webfont.woff2') format('woff2');
 }
+
+@font-face {
+    font-family: 'Gotham-Book';
+    src: url('/fonts/gotham-book-webfont.woff2') format('woff2');
+}
 :root {
     --black-gradient: linear-gradient(
         144.39deg,
