--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,13 @@
 @font-face {
     font-family: 'Gotham';
     src: url('/fonts/gotham-bold-webfont.woff2') format('woff2');
+    font-display: swap
 }
 
 @font-face {
     font-family: 'Gotham-Book';
     src: url('/fonts/gotham-book-webfont.woff2') format('woff2');
+    font-display: swap
 }
 :root {
     --black-gradient: linear-gradient(
